Fix donate positioning on smaller screens

--- a/public/options/options.css
+++ b/public/options/options.css
@@ -779,6 +779,8 @@ svg {
     }
     #createdBy > div {
         display: inline-block;
+        position: relative;
+        right: 20px;
     }
     #sbDonate {
         position: absolute;
